@startuml

title Diagrama de classes de projeto - UC003

' Primeira Etapa

class AfiliacaoController {
    +solicitaAfiliacao(email, cpf)
    +validarDadosIdentificacao(dados)
    +validarPerfil(perfil, habilidades)
    +registrarAceite()
    +buscaCandidatosPendentes()
}

class PedidoAfiliacao {
    -status
    -data
    +criarPedidoAfiliacao()
    +associarCandidato(candidato)
    +buscaCandidatoPendentes()

}

class Candidato {
    -nome
    -sexo
    -dataNascimento
    -nacionalidade
    -profissao
    -situacao
    +getCandidato()
    +get(id)
    +mudaSituacao(candidato)
    +getCandidato("pendente")
    +salva(candidato)
    +getPerfilCandidato()
    +getHabilidadesCandidato()
    +getInteressesCandidato()
}


AfiliacaoController "1" -- "1..*" PedidoAfiliacao: possui
PedidoAfiliacao "1" -- "1" Candidato: procura

class CandidatoController {
    +exibeInformacaoDetalhadaCandidato(id)
    +exibeHabilidadesPerfilInteressesVoluntario(id)
    +solicitaAprovacaoCandidato(id)
}

CandidatoController "1" -- "0..*" Candidato: possui

class ONGController {
    +solicitacaoRecomendacaoOngParceira(perfil)
}

class ONG {
    +filtroONGDeAcordoComPerfil(perfil);
    +getCampanhas()
}

class Perfil {
    -habilidades
    -interesses
    +getHabilidades()
    +getInteresses()
    +procuraPerfil(perfil)
}


ONGController "1" -- "0..*" ONG: possui
ONG "0..*" -- "1..*" Perfil: possui

class Recomendacao {
    -campanhas
    +criaRecomendacao(ongs)
    +salvaRecomendacao(recomendacao)
    +associaOngs(ong)
    +associaCampanhas(ongs)
}

class Campanha {
    -descricao
    +getOng()
}


ONGController "1" -- "1" Recomendacao: cria
Recomendacao "0..*" -- "0..*" ONG: possui
Recomendacao "0..*" -- "0..*" Campanha: possui

class AprovacaoController {
    +aprovaVoluntario(idVoluntario, recomendacao)
    +enviaEmailLoginInstrucao(voluntarioEmail, voluntarioLogin, voluntarioSenha)
    +enviaEmailResultadoAfiliacaoRecomendacao(voluntarioEmail,recomendacao)
    +rejeitaCandidato(candidato, motivo)
    +atualizaMotivoSituacaoCandidato(candidato,motivo)
    +enviaEmailRejeicao(candidatoEmail)
    +enviaEmailResultadoAfiliacaoRecomendacao(voluntarioEmail, recomendacao)
}

class Voluntario {
    -login
    -senha
    +get(idVoluntario)
    +salvaVoluntario(voluntario)
    +setPerfil(perfil)
    +getPerfilVoluntario()
    +getHabilidadesVoluntario()
    +getInteressesVoluntario()
    +geraLoginSenhaVoluntario(voluntario)
}

AprovacaoController "1" -- "1..*" Voluntario: possui

class Interesses {
    -descricao
}

class Habilidades {
    -descricao
}

Perfil "1" -- "1..*" Interesses: possui
Perfil "1" -- "1..*" Habilidades: possui

ONG "1" -- "0..*" Campanha: possui

class Aprovacao {
    -data
    -status
    -motivo
    +associaVoluntario(voluntario)
    +insereMotivo(motivo)
    +insereStatus(status)
    +insereData(data)
    +salvaAprovacao(aprovacao)
}

AprovacaoController "1" -- "0..*" Aprovacao: possui

class Vaga {
    +retornaVagaDeAcordoComPerfil(perfil)
    +retornaCampanha()
}

ONGController "1" -- "0..*" Vaga: possui


Vaga "0..*" -- "1" Campanha: faz parte

@enduml
